Fix a 1.5ism I introduced in latest commit
git-svn-id: file:///home/toad/git-migration/temprepository/trunk/freenet@11989 67a373e5-eb02-0410-a15c-ee090a768436